✨ feat(admin): add member restore endpoint
